# github-action

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  action.yml  main.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: workflow.yaml
action/: action.py  main.py
action/arguments/: action_arguments.py  parse_action_arguments.py
action/clients/github/: client.py  model.py
action/clients/package_maintenance/: client.py  model.py
action/domain/: commons.py  packages_ignore_filter.py  packages_maintenance_report.py  packages_maintenance_retriever.py  packages_retriever.py
action/models/: action_arguments.py  parse_action_arguments.py
action/utils/: list_utils.py  markdown_document.py
src/: action.py
src/arguments/: action_arguments.py  parse_action_arguments.py
src/clients/github/: client.py  model.py
src/clients/package_maintenance/: client.py
src/domain/: packages_ignore_filter.py  packages_maintenance_report.py  packages_maintenance_retriever.py  packages_retriever.py
src/models/: commons.py  packages_maintenance_report.py  packages_maintenance_report_row.py
src/service/: packages_maintenance_retriever.py  packages_retriever.py
src/utils/: list_utils.py  markdown_document.py
src/view/: markdown_document.py  markdown_utils.py  packages_maintenance_report_document.py
tests/: test_main.py
tests/arguments/: test_parse_action_arguments.py
tests/domain/: test_packages_ignore_filter.py  test_packages_maintenance_report.py  test_packages_retriever.py
tests/utils/: test_list_utils.py
(+2 files in other folders)
